Migrate integration tests to Testcontainers with LocalStack
Replaces sbt-dynamodb plugin with Testcontainers for integration testing:
- Add Testcontainers dependencies with LocalStack DynamoDB support
- Create integration-tests/ subdirectory with separate build.sbt
- Move test infrastructure from test-base to integration-tests/base
- Implement DynamoDBContainer with automatic lifecycle management
- Configure DynamoDBContainerRegistry for shared container across tests

Build improvements:
- Extract BuildCommon.scala with skipIntegrationTests and commonSettings
- Simplify main build.sbt by moving integration test definitions
- Remove duplicate logback-test.xml files (keep one in base module)
- Remove redundant project/project/build.sbt

CI workflow changes:
- Split into separate unit-tests, integration-tests, and scalafmt jobs
- Run integration tests on merge queue or with 'run-integration-tests' label
- Add ci-success job to gate merge queue progression

Integration tests now use Docker-based LocalStack for realistic DynamoDB
behavior without requiring DynamoDB Local downloads.